crates/cribo/tests/snapshots/test_bundling_snapshots__bundled_code@ast_rewriting_function_name_collision.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: module_b ─
"""\nModule B with a process_data function.\nThis will conflict with module_a.process_data when bundled.\n"""
def __module_b_process_data(input_data: str) -> str:
    """Process data in module B's way."""
    return f"Module B processed: {input_data.lower()}"
def another_helper() -> str:
    """A helper function unique to module B."""
    return "Module B helper"
__module_b_MODULE_NAME = "module_b"

# ─ Module: module_a ─
"""\nModule A with a process_data function.\nThis will conflict with module_b.process_data when bundled.\n"""
def __module_a_process_data(input_data: str) -> str:
    """Process data in module A's way."""
    return f"Module A processed: {input_data.upper()}"
def helper_function() -> str:
    """A helper function unique to module A."""
    return "Module A helper"
__module_a_MODULE_NAME = "module_a"

# ─ Entry Module: main ─
process_a = __module_a_process_data
process_b = __module_b_process_data
"""\nFunction name collision test.\nBoth modules define a function with the same name.\n"""
def main():
    result_a = process_a("input from A")
    result_b = process_b("input from B")
    print(f"Module A result: {result_a}")
    print(f"Module B result: {result_b}")
    return {"module_a": result_a, "module_b": result_b}
if __name__ == "__main__":
    result = main()
    print("Result:", result)
