crates/cribo/tests/snapshots/test_bundling_snapshots__bundled_code@ast_rewriting_happy_path.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: services.database ─
"""\nDatabase service module.\nContains database-related functionality with unique names.\n"""
from typing import Dict, Any, Optional
class DatabaseConnection:
    """Represents a database connection."""

    def __init__(self, connection_string: str):
        self.connection_string = connection_string
        self.is_connected = False

    def connect(self) -> bool:
        """Connect to the database."""
        self.is_connected = True
        return True

    def disconnect(self) -> None:
        """Disconnect from the database."""
        self.is_connected = False
class DatabaseService:
    """Service for database operations."""

    def __init__(self, database_path: str):
        self.connection_string = f"sqlite://{database_path}"
        self.connection = DatabaseConnection(self.connection_string)
        self.cache: Dict[str, Any] = {}

    def connect(self) -> bool:
        """Connect to the database."""
        return self.connection.connect()

    def query(self, sql: str) -> Optional[Dict[str, Any]]:
        """Execute a query."""
        if not self.connection.is_connected:
            self.connect()
        return {"result": f"Executed: {sql}"}

    def close(self) -> None:
        """Close the database connection."""
        self.connection.disconnect()
DEFAULT_DATABASE_PATH = "app.db"
MAX_CONNECTIONS = 10

# ─ Module: models.user ─
"""\nUser model with role enumeration.\nNo naming conflicts with other modules.\n"""
from enum import Enum
class UserRole(Enum):
    """User role enumeration."""
    ADMIN = "admin"
    USER = "user"
    GUEST = "guest"
class User:
    """Simple user model."""

    def __init__(self, name: str, email: str, role: UserRole=UserRole.USER):
        self.name = name
        self.email = email
        self.role = role
        self.active = True

    def __str__(self) -> str:
        return f"User(name='{self.name}', email='{self.email}', role={self.role.value})"

    def __repr__(self) -> str:
        return self.__str__()

    def activate(self) -> None:
        """Activate the user."""
        self.active = True

    def deactivate(self) -> None:
        """Deactivate the user."""
        self.active = False
DEFAULT_ROLE = UserRole.USER

# ─ Module: utils.helpers ─
"""\nUtility helper functions for the happy path test.\nThese functions have unique names that shouldn't conflict.\n"""
from typing import List
def format_message(greeting: str, name: str) -> str:
    """Format a greeting message."""
    return f"{greeting}, {name}!"
def calculate_total(values: List[int]) -> int:
    """Calculate the sum of a list of integers."""
    return sum(values)
def get_version() -> str:
    """Get the version string."""
    return "1.0.0"
UTILS_VERSION = "1.0.0"

# ─ Module: services ─

# ─ Module: models ─

# ─ Module: utils ─

# ─ Entry Module: main ─
"""\nHappy path main module that uses multiple nested modules without name collisions.\nThis should bundle cleanly without any AST rewriting for conflicts.\n"""
def main():
    user = User("Alice", "alice@example.com", UserRole.ADMIN)
    db = DatabaseService("test.db")
    message = format_message("Welcome", user.name)
    total = calculate_total([10, 20, 30])
    print(message)
    print(f"User: {user}")
    print(f"Role: {user.role.value}")
    print(f"Database: {db.connection_string}")
    print(f"Total: {total}")
    return {"user": user.name, "email": user.email, "role": user.role.value, "total": total, "message": message}
if __name__ == "__main__":
    result = main()
    print("Result:", result)
