crates/cribo/tests/snapshots/test_bundling_snapshots__bundled_code@ast_rewriting_variable_name_collision.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: config ─
"""\nConfig module with global variables.\nThese will conflict with constants.py when bundled.\n"""
__config_API_URL = "https://api.config.com"
__config_VERSION = "2.1.0"
MAX_RETRIES = 3
CACHE_SIZE = 1000

# ─ Module: constants ─
"""\nConstants module with global variables.\nThese will conflict with config.py when bundled.\n"""
__constants_API_URL = "https://api.constants.com"
__constants_VERSION = "1.0.0"
DEFAULT_TIMEOUT = 30
MAX_CONNECTIONS = 100
RETRY_DELAY = 5

# ─ Entry Module: main ─
API_URL = __constants_API_URL
VERSION = __constants_VERSION
CONFIG_API_URL = __config_API_URL
CONFIG_VERSION = __config_VERSION
"""\nVariable name collision test.\nBoth modules define variables with the same names.\n"""
def main():
    print(f"Constants API URL: {API_URL}")
    print(f"Config API URL: {CONFIG_API_URL}")
    print(f"Constants Version: {VERSION}")
    print(f"Config Version: {CONFIG_VERSION}")
    print(f"Default Timeout: {DEFAULT_TIMEOUT}")
    print(f"Max Retries: {MAX_RETRIES}")
    return {"constants_api_url": API_URL, "config_api_url": CONFIG_API_URL, "constants_version": VERSION, "config_version": CONFIG_VERSION, "default_timeout": DEFAULT_TIMEOUT, "max_retries": MAX_RETRIES}
if __name__ == "__main__":
    result = main()
    print("Result:", result)
