crates/cribo/tests/snapshots/test_bundling_snapshots__bundled_code@future_imports_multiple.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

from __future__ import annotations, division, print_function

# ─ Module: module_b ─
def func_b():
    print("Function B")

# ─ Module: module_a ─
def func_a():
    print("Function A")

# ─ Entry Module: main ─
def main():
    func_a()
    func_b()
if __name__ == "__main__":
    main()
