crates/cribo/tests/snapshots/test_bundling_snapshots__bundled_code@stickytape_circular_reference.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: first ─
import types
first = types.ModuleType('first')
exec('', first.__dict__)

# ─ Module: second ─

# ─ Entry Module: main ─
print("Hello")
